# data-engine

./: .gitignore  Dockerfile  LICENSE  README.md  process-segment.sh  pyproject.toml
fish_data_engine/: api.py  db.py  generate_segments.py  task.py  ui.py
fish_data_engine/annotation/: api.py  ui.py
fish_data_engine/tasks/: asr.py  generate_segments.py  segment_vad.py  task.py
jobs/: generate_segments.sh
